mobile fixes and scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -90,3 +90,11 @@ body {
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
